# PublishSubscribeESP32

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  clang_tidy_main.sh  format_main.sh
main/: CMakeLists.txt  CMakeLists_PC.txt  main.cpp
main/CException/: .clang-tidy  CException.c  CException.h  README.md
main/bytepack/: README.md  bytepack.hpp
main/cJSON/: .clang-tidy
main/cjsonpp/: README.md  cjsonpp.cpp  cjsonpp.hpp  cjsonpp_result.hpp
main/cpptime/: README.md  cpptime.cpp  cpptime.hpp
main/examples/: example_allocator_stress.cpp  example_async_processing.cpp  example_bytepack_and_data_task.cpp  example_common.hpp  example_hardware_timer_interrupt.cpp  example_json_and_fpm.cpp  example_pub_sub_and_task.cpp  example_ring_container.cpp  example_smp.cpp  example_sync_container.cpp  example_time_list.cpp  example_timer_and_date.cpp  example_variant_fsm.cpp  example_worker_and_command.cpp  examples.hpp
main/fpm/: README.md  fixed.hpp  ios.hpp  math.hpp
main/fpm/docs/: _config.yml
main/portable_concurrency/: LICENSE  README.md  execution.hpp  functional.hpp  functional_fwd.hpp  future.hpp  latch.hpp  p_execution.hpp  p_functional.hpp  p_functional_fwd.hpp  p_future.hpp  p_future_fwd.hpp  p_future_policy.hpp  p_future_v2.hpp  p_latch.hpp  p_thread_pool.hpp  p_timed_waiter.hpp  thread_pool.hpp
main/portable_concurrency/bits/: algo_adapters.h  alias_namespace.h  async.h  closable_queue.h  closable_queue.hpp  closable_queue_fwd.hpp  concurrency_config.hpp  concurrency_type_traits.h  concurrency_type_traits.hpp  config.h  config.hpp  continuations_stack.h  continuations_stack.hpp  coro.h  coro.hpp  either.h  either.hpp  execution.h  execution_impl.hpp  expected_compat.h  future.h  future.hpp  future_sequence.h  future_state.h  fwd.h  fwd.hpp  invoke.h  invoke.hpp  latch.h  latch_impl.hpp  make_future.h  once_consumable_stack.h  once_consumable_stack.hpp  once_consumable_stack_fwd.hpp  packaged_task.h  packaged_task_result.h  packaged_task_result.hpp  portable_concurrency.cpp  portable_concurrency_runtime.cpp  promise.h  (+20 more)
main/tests/: .clang-tidy  TestException.c  test_async_observer.cpp  test_bytepack.cpp  test_cexception.cpp  test_cjsonpp.cpp  test_cond_var.cpp  test_cpptime.cpp  test_critical_section.cpp  test_data_task.cpp  test_generic_task.cpp  test_gzip_wrapper.cpp  test_helper.hpp  test_histogram.cpp  test_lock_free_ring_buffer.cpp  test_memory_pipe.cpp  test_periodic_task.cpp  test_portable_concurrency.cpp  test_portable_concurrency_policy.cpp  test_portable_concurrency_scenarios.cpp  test_portable_concurrency_v2.cpp  test_portable_concurrency_v2_worker_task.cpp  test_portable_concurrency_worker_task.cpp  test_ring_buffer.cpp  test_ring_vector.cpp  test_sync_dictionary.cpp  test_sync_object.cpp  test_sync_observer.cpp  test_sync_priority_queue.cpp  test_sync_queue.cpp  test_sync_ring_buffer.cpp  test_sync_ring_vector.cpp  test_sync_time_list.cpp  test_time_list.cpp  test_timer_scheduler.cpp  test_worker_task.cpp
main/tests/fpm/: common.hpp  test_arithmetic.cpp  test_arithmetic_int.cpp  test_basic_math.cpp  test_classification.cpp  test_constants.cpp  test_conversion.cpp  test_customizations.cpp  test_detail.cpp  test_from.cpp  test_input.cpp  test_manip.cpp  test_nearest.cpp  test_output.cpp  test_power.cpp  test_trigonometry.cpp
main/tests/portable_concurrency/: CMakeLists.txt  PARITY_BACKLOG.md  simple_arena_allocator.h  test_abandon.cpp  test_abandon_result.cpp  test_algo_adapters.cpp  test_async.cpp  test_async_result.cpp  test_cancelation.cpp  test_continuation_result.cpp  test_continuation_result_no_exceptions.cpp  test_either.cpp  test_future.cpp  test_future_next.cpp  test_future_result.cpp  test_future_then.cpp  test_future_then_unwrap.cpp  test_helpers.h  test_next_result.cpp  test_notify.cpp  test_once_consumable_stack.cpp  test_packaged_task.cpp  test_packaged_task_result.cpp  test_packaged_task_unwrap.cpp  test_promise.cpp  test_promise_result.cpp  test_reference_type_unsupported.cpp  test_scenarios.cpp  test_shared_future.cpp  test_shared_future_next.cpp  test_shared_future_then.cpp  test_shared_future_then_unwrap.cpp  test_shared_result.cpp  test_small_unique_function.cpp  test_thread_pool.cpp  test_timed_waiter.cpp  test_tools.cpp  test_tools.h  test_unique_function.cpp  test_when_all_result.cpp  (+5 more)
main/tests/portable_concurrency_v2/: PARITY_BACKLOG.md  test_abandon_result.cpp  test_async_result.cpp  test_continuation_result.cpp  test_continuation_result_no_exceptions.cpp  test_future_result.cpp  test_next_result.cpp  test_packaged_task_result.cpp  test_promise_result.cpp  test_reference_type_unsupported.cpp  test_shared_result.cpp  test_v2_scenarios.cpp  test_when_all_result.cpp  test_when_any_result.cpp
main/tools/: README.md  async_observer.hpp  base_task.hpp  cond_var.hpp  critical_section.hpp  critical_section_freertos.inl  critical_section_std.inl  data_task.hpp  expected.hpp  generic_task.hpp  gzip_wrapper.cpp  gzip_wrapper.hpp  histogram.hpp  linux_sched_deadline.hpp  lock_free_ring_buffer.hpp  logger.hpp  mem_pool_allocator.cpp  memory_pipe.hpp  non_copyable.hpp  periodic_task.hpp  periodic_task_freertos.inl  periodic_task_std.inl  platform_detection.hpp  platform_helpers.hpp  ring_buffer.hpp  ring_vector.hpp  sync_dictionary.hpp  sync_object.cpp  sync_object.hpp  sync_observer.hpp  sync_priority_queue.hpp  sync_queue.hpp  sync_ring_buffer.hpp  sync_ring_vector.hpp  sync_time_list.hpp  time_list.hpp  timer_scheduler.cpp  timer_scheduler.hpp  variant_overload.hpp  worker_task.hpp
main/tools/freertos/: cond_var_freertos.inl  critical_section_freertos.inl  data_task_freertos.inl  generic_task_freertos.inl  memory_pipe_freertos.inl  periodic_task_freertos.inl  platform_helpers_freertos.inl  sync_object_freertos.inl  sync_object_impl_freertos.inl  timer_scheduler_freertos.inl  timer_scheduler_impl_freertos.inl  worker_task_freertos.inl
main/uzlib/: .clang-tidy  README.md  adler32.c  crc32.c  defl_static.c  defl_static.h  genlz77.c  tinfgzip.c  tinflate.c  tinfzlib.c  uzlib.h
(+24 files in other folders)
